@@ -1,5 +1,11 @@
 2001-08-27  Sam Steingold  <sds@gnu.org>
 
+	win32gcc names libraries libFOO.a and not FOO.LISP
+	* makemake.in (LIB_TYPE): new variable, used instead of $HOS
+	in creating library dependecies
+
+2001-08-27  Sam Steingold  <sds@gnu.org>
+
 	fixed bug #455559
 	* defstruct.lisp (ds-arg-default): when ARG is a list and default
 	is NIL, return (ARG NIL) and not (ARG)
